crates/rspyts-macros/tests/ui/tuple_arity_thirteen.rs
use rspyts::bridge;

#[bridge]
pub struct TooManyTupleItems {
    pub values: (u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8),
}

fn main() {}
